# bip39_tool

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
